--- a/bayi/src/index.html
+++ b/bayi/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>laCartera</title>
     <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=1920px, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,400i,600,700,800,900" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
